# shop

./: db.sqlite3  items_view.py  main.py  pyproject.toml
alembic/versions/: 2025_02_27_1344-071b138ee7dd_create_products_table.py  2025_02_27_1402-c055f8d6e800_create_users_table.py  2025_03_03_1458-de79ea118c97_create_posts_table.py  2025_03_03_1540-05394ef6c1c0_create_profiles_table.py
api_v1/products/: crud.py  dependencies.py  views.py
core/models/: __init__.py  db_helper.py  mixins.py  post.py  profile.py  user.py
users/: schemas.py  views.py
